--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/flex-layout": "^6.0.0-beta.17",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
-    "@angular/material": "angular/material2-builds",
+    "@angular/material": "^6.4.6",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.3.1",
     "hammerjs": "^2.0.8",
+    "node-sass": "^4.9.3",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
@@ -50,6 +51,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "^2.7.2"
   }
 }
