--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "core-js": "^2.5.4",
     "firebase": "^5.3.1",
     "hammerjs": "^2.0.8",
+    "ngx-datatable": "^1.0.3",
+    "ngx-infinite-scroll": "^6.0.1",
     "node-sass": "^4.9.3",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
